src/test/resources/expected/test-exception-13.kore.golden
Parse error: ../src/test/resources//test-exception-13.kore:5:12:
  |
5 |   symbol f{#S}() : #S []
  |            ^
genericIdRawParser: Invalid first character '#'.
